# ai-identicon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo-video-script.md
examples/: gallery.py
scripts/: render_readme_loops.py
src/ai_identicon/: __init__.py  audio.py  clipboard.py  controller.py  genome.py  geometry.py  model.py  portrait.py  widget.py
tests/: golden_v1.json  test_clipboard.py  test_controller.py  test_genome_geometry.py  test_golden_v1.py  test_model.py  test_portrait.py
